# textr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  config.json  rustfmt.toml
assets/: chinese_text.json  configEmpty.json  configLorem.json  configUnicode.json  example_doc.json  grwG9a9hI1T8qruk4kOFpYNC84Dh35v7.json  jap_test.json  japanese_poem.json  loremIpsum.json  textTest.txt
assets/documents/: hTjW7nEfLmRk5sOpAqZcVbYxNwMuGdFj.json
configs/: default_config.json
document_configs/: 6hohhRcSQM.json  GCsNUg6y0A.json  Vnbo21axCr.json  default_config.json  default_document_config.json  eWgqpnQFe2.json  txFnVAmTOY.json  xBnmaEpyTv.json
documents/: 2asfZ7I6ml.json  Eh1NfFTr5N.json  Fr1k5YBYvD.json  HGb1LLJ2YC.json  KHD08Zkrxs.json  YfJZYcpbnQ.json  ZAYVp0Guod.json  aHdnBO6FFn.json  chinese_text.json  example_doc.json  jap_test.json  japanese_poem.json  lorem_ipsum.json  lvQO3BJQra.json  mPFVJ08Xhx.json  rand_utf8.json
examples/: cli_interface.rs  colored_cube.rs  cube.rs  document_to_pdf.rs  pdf_from_scratch.rs  spinning_cube.rs  text_rendering.rs  triangle.rs
fonts/: default_fonts_config.json
fuzz/: document_generator_config.json
fuzz/fuzz_targets/: 07785b8e-f3cf-4a5c-a801-1be85b65a973.json  32e51175-9f23-4de6-9ecb-eb30e2f8cd6e.json  74db11d2-688b-412f-ad54-befad9461da1.json  76467672-8516-4383-92bd-f090a2fcb3e7.json  7914944f-c768-40dd-9707-45cf1d72a7d8.json  99a9ed15-9c02-4444-837d-b1d737f7d455.json  ba4bc276-291e-47d1-a72b-aa22ee9681bf.json  bcf92c1c-0958-4196-b211-ca172518a5e5.json  d33217ad-3f62-4360-a90f-0354b850a58d.json  d6052cfd-4547-4410-b6f6-3853a06796cc.json  e64b668c-9f9e-4f26-93e9-0a2c8269bc08.json
images/: .gitignore
shaders/spinning_cube/: fragment.glsl  vertex.glsl
src/: batch_test.rs  buffers.rs  configuration_format.rs  cursor.rs  custom_error.rs  document.rs  document_configuration.rs  document_format.rs  error.rs  fonts_configuration.rs  fragmentShader.glsl  glyphFragmentShader.glsl  graphics.rs  image_system.rs  layouting.rs  lib.rs  line.rs  main.rs  pdf.rs  shader.rs  shader.wgsl  test.rs  text.rs  text_atlas.rs  traceable_error.rs  vertexShader.glsl
test_configs/: batch_document_generation_config.json  batch_image_test_basic_config.json  batch_test_basic_config.json
tests/: fuzz_targets_generator.rs  fuzz_targets_generator_configuration.json  fuzz_test.rs  target_references_generator.rs
