[package]
name = "textr"
version = "0.1.0"
edition = "2021"
description = "TeX-inspired text formatting app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
clap = { version = "4.5.3", features = ["derive"] }
rayon = "1.10.0"
rand = "0.8.5"
rand-utf8 = "0.0.1"
printpdf = { version = "0.7.0", features = [
    "log",
    "embedded_images",
    "font_subsetting",
] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
lopdf = "0.32.0"
image = { version = "0.25.1", default-features = false, features = ["png"] }

[profile.release]
debug = true

[profile.dev]
opt-level = 1
