[package]
name = "textr"
version = "0.1.0"
edition = "2021"
description = "TeX-inspired text formatting app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
clap = { version = "4.5.3", features = ["derive"] }
rayon = "1.10.0"
rand = "0.8.5"
rand-utf8 = "0.0.1"
# uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
lopdf = "0.32.0"
image = { version = "0.25.1", default-features = false, features = ["png"] }
owned_ttf_parser = "0.20.0"
time = "0.3.36"
nalgebra-glm = "0.18.0"
unicode-normalization = "0.1.23"
similar-asserts = "1.5.0"

[profile.release]
debug = true

[profile.dev]
opt-level = 1
